<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context=".addingTask">

    <View
        android:id="@+id/view2"
        android:layout_width="356dp"
        android:layout_height="494dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#C3AED9E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:text="@string/Addtask_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.218"
        app:layout_constraintHorizontal_bias="0.498" />

    <EditText
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:inputType="textPersonName"
        android:hint="@string/textName"
        android:ems="10"
        android:textColor="@color/black"
        android:background="#C6C5C5"
        android:id="@+id/editTextTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:layout_constraintHorizontal_bias="0.54" />

    <MultiAutoCompleteTextView
        android:layout_width="273dp"
        android:layout_height="145dp"
        android:background="#CDC6CD"
        android:hint="@string/taskDescription_text"
        android:id="@+id/task_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:layout_constraintHorizontal_bias="0.536" />

    <Button
        android:text="@string/addButton_text"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:id="@+id/addTaskbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        app:layout_constraintHorizontal_bias="0.497" />

    <ImageView
        android:id="@+id/nextArrow"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginStart="338dp"
        android:layout_marginEnd="25dp"
        android:background="#A8B967D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/next" />

</androidx.constraintlayout.widget.ConstraintLayout>