<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue"
        tools:context=".signupActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpTitle"
            android:text="@string/signUp_text"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.172" />

    <EditText
            android:layout_width="337dp"
            android:layout_height="63dp"
            android:inputType="textEmailAddress"
            android:id="@+id/EmailAddress"
            android:layout_below="@id/SignUpTitle"
            android:background="#B7E2DDDD"
            android:hint="@string/email_Edit"
            android:textColorHint="@color/Grey"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawablePadding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintVertical_bias="0.386"
            android:autofillHints="" />

    <EditText
            android:layout_width="335dp"
            android:layout_height="64dp"
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:layout_below="@id/EmailAddress"
            android:background="#B7E2DDDD"
            android:textColorHint="@color/Grey"
            android:hint="@string/password_Edit"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawableTint="@color/white"
            android:drawablePadding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.553"
            android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupbtn"
            android:text="@string/signUp_text"
            android:textSize="20sp"
            android:layout_below="@id/Password"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/blue"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.676"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494" />

    <TextView
            android:text="@string/click_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textClicktoLogin"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.814"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

    <ImageButton
            android:layout_width="76dp"
            android:layout_height="71dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/roundstyle"
            app:srcCompat="@drawable/common_full_open_on_phone"
            android:id="@+id/phoneLoginButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="102dp"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="105dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintVertical_bias="0.714" />

</androidx.constraintlayout.widget.ConstraintLayout>